Import dependent-literals for open-source release.
The plugin for this currently only builds with GHC 8.6.

Change-Id: Ida6c142a8cd314daa5a5ec39437a961fc26936f7

--- a/stack-lts-14.yaml
+++ b/stack-lts-14.yaml
@@ -15,5 +15,17 @@
 resolver: lts-14.27
 
 packages:
+- dependent-literals
+- dependent-literals-plugin
 - numeric-kinds
 - snumber
+
+extra-deps:
+- github: google/hs-attenuation
+  commit: 3243f2586e5908a09fdd0c5ee32b0adc72271fc4
+- github: google/hs-fin-vec
+  commit: 12bcae4bb7b3eb4f720ff3d56ee5e30a064eb3f8
+  subdirs:
+    - fin-int
+    - short-vec
+    - sint
