Get the plugin working on GHC 8.8.
Change-Id: I11946873826c0b01eb4da683c6cd74f8cf01075f

--- a/stack-lts-16.yaml
+++ b/stack-lts-16.yaml
@@ -16,7 +16,7 @@ resolver: lts-16.31
 
 packages:
 - dependent-literals
-# - dependent-literals-plugin
+- dependent-literals-plugin
 - numeric-kinds
 - snumber
 
