--- a/dependent-literals-plugin/dependent-literals-plugin.cabal
+++ b/dependent-literals-plugin/dependent-literals-plugin.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 4daaacdd2f096861762d2468157c71892e50ba6a18b6adea6f3ddfcf75a07639
+-- hash: 248703d76c6b079ec732d3a51e6293aaf4ebb103f941c832eceb13343a3acdcc
 
 name:           dependent-literals-plugin
 version:        0.1.0.0
@@ -46,7 +46,7 @@ library
   ghc-options: -Wall -Werror
   build-depends:
       base >=4.12 && <4.16
-    , ghc >=8.6 && <8.7
+    , ghc >=8.6 && <8.9
     , sint >=0.1 && <0.2
     , syb
   default-language: Haskell2010
@@ -58,7 +58,7 @@ test-suite FinErrors-test
       FinErrors
   hs-source-dirs:
       tests
-  default-extensions: NoStarIsType DataKinds FlexibleContexts ViewPatterns
+  default-extensions: NoStarIsType DataKinds FlexibleContexts ViewPatterns TypeApplications
   ghc-options: -Wall -Werror -fplugin=DependentLiterals.Plugin
   build-depends:
       base >=4.12 && <4.16
@@ -80,7 +80,7 @@ test-suite IntErrors-test
       IntErrors
   hs-source-dirs:
       tests
-  default-extensions: NoStarIsType DataKinds FlexibleContexts ViewPatterns
+  default-extensions: NoStarIsType DataKinds FlexibleContexts ViewPatterns TypeApplications
   ghc-options: -Wall -Werror -fplugin=DependentLiterals.Plugin
   build-depends:
       base >=4.12 && <4.16
@@ -117,7 +117,7 @@ test-suite Plugin-test
       WordPatterns
   hs-source-dirs:
       tests
-  default-extensions: NoStarIsType DataKinds FlexibleContexts ViewPatterns
+  default-extensions: NoStarIsType DataKinds FlexibleContexts ViewPatterns TypeApplications
   ghc-options: -Wall -Werror -fplugin=DependentLiterals.Plugin
   build-depends:
       base >=4.12 && <4.16
@@ -137,7 +137,7 @@ test-suite PolyErrors-test
       PolyErrors
   hs-source-dirs:
       tests
-  default-extensions: NoStarIsType DataKinds FlexibleContexts ViewPatterns
+  default-extensions: NoStarIsType DataKinds FlexibleContexts ViewPatterns TypeApplications
   ghc-options: -Wall -Werror -fplugin=DependentLiterals.Plugin
   build-depends:
       base >=4.12 && <4.16
@@ -159,7 +159,7 @@ test-suite SIntErrors-test
       SIntErrors
   hs-source-dirs:
       tests
-  default-extensions: NoStarIsType DataKinds FlexibleContexts ViewPatterns
+  default-extensions: NoStarIsType DataKinds FlexibleContexts ViewPatterns TypeApplications
   ghc-options: -Wall -Werror -fplugin=DependentLiterals.Plugin
   build-depends:
       base >=4.12 && <4.16
@@ -181,7 +181,7 @@ test-suite SNumberErrors-test
       SNumberErrors
   hs-source-dirs:
       tests
-  default-extensions: NoStarIsType DataKinds FlexibleContexts ViewPatterns
+  default-extensions: NoStarIsType DataKinds FlexibleContexts ViewPatterns TypeApplications
   ghc-options: -Wall -Werror -fplugin=DependentLiterals.Plugin
   build-depends:
       base >=4.12 && <4.16
@@ -203,7 +203,7 @@ test-suite WordErrors-test
       WordErrors
   hs-source-dirs:
       tests
-  default-extensions: NoStarIsType DataKinds FlexibleContexts ViewPatterns
+  default-extensions: NoStarIsType DataKinds FlexibleContexts ViewPatterns TypeApplications
   ghc-options: -Wall -Werror -fplugin=DependentLiterals.Plugin
   build-depends:
       base >=4.12 && <4.16
