--- a/dependent-literals-plugin/package.yaml
+++ b/dependent-literals-plugin/package.yaml
@@ -50,13 +50,18 @@ library:
   exposed-modules:
     - DependentLiterals.Plugin
   dependencies:
-    - ghc >= 8.6 && < 8.7
+    - ghc >= 8.6 && < 8.9
     - syb
 
 _test-template: &test-template
   main: Main.hs
   source-dirs: tests
-  default-extensions: [NoStarIsType, DataKinds, FlexibleContexts, ViewPatterns]
+  default-extensions:
+    - NoStarIsType
+    - DataKinds
+    - FlexibleContexts
+    - ViewPatterns
+    - TypeApplications
   ghc-options: [-fplugin=DependentLiterals.Plugin]
   dependencies:
     - fin-int >= 0.1 && < 0.2
