--- a/stack.yaml
+++ b/stack.yaml
@@ -16,7 +16,7 @@ resolver: lts-17.9
 
 packages:
 - dependent-literals
-# - dependent-literals-plugin
+- dependent-literals-plugin
 - numeric-kinds
 - snumber
 
