Add version bounds for syb.
Change-Id: I1390172fb3bd0a2fdc256d2c1c4b31bf3c0db2d8

--- a/dependent-literals-plugin/package.yaml
+++ b/dependent-literals-plugin/package.yaml
@@ -51,7 +51,7 @@ library:
     - DependentLiterals.Plugin
   dependencies:
     - ghc >= 8.6 && < 9.1
-    - syb
+    - syb >= 0.1 && < 0.8
 
 _test-template: &test-template
   main: Main.hs
