--- a/dependent-literals-plugin/dependent-literals-plugin.cabal
+++ b/dependent-literals-plugin/dependent-literals-plugin.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: b6fae0b17e33024ee0399042c31fd4ce89826a76965264ca7ff1d773f8798f2c
+-- hash: 8a16f024f9212124bb157d54d347634e8e57900778dfd708c272974293e577b8
 
 name:           dependent-literals-plugin
 version:        0.1.0.0
@@ -48,7 +48,7 @@ library
       base >=4.12 && <4.16
     , ghc >=8.6 && <9.1
     , sint >=0.1 && <0.2
-    , syb
+    , syb >=0.1 && <0.8
   default-language: Haskell2010
 
 test-suite FinErrors-test
