--- a/dependent-literals-plugin/package.yaml
+++ b/dependent-literals-plugin/package.yaml
@@ -96,6 +96,7 @@ tests:
       - WithNegativeLiterals
       - WordLiterals
       - WordPatterns
+      - VecExamples
 
   FinErrors-test:
     <<: *error-test-template
