--- a/dependent-literals-plugin/dependent-literals-plugin.cabal
+++ b/dependent-literals-plugin/dependent-literals-plugin.cabal
@@ -4,17 +4,35 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 1017527fd2d152496dcb2ce33956de73b88fa6670c4fb80a04b17c60caeeb101
+-- hash: acdf4e8362e54c7dabc311e213378ec098339936e11995a39c08d189594f7ece
 
 name:           dependent-literals-plugin
 version:        0.1.0.0
 synopsis:       Rewrites integer literals to a pseudo-dependently-typed form.
-description:    This plugin rewrites integer literals to uses of `lit#` from
-                `DependentLiterals.Int`, so that the value of the literal is reflected on
-                both the value level and the type level.  This allows
-                pseudo-dependently-typed usage like `mkVec 5 id` ->
-                `[0, 1, 2, 3, 4] :: Vec 5 (Fin 5)`, as well as customized bounds checking
-                like making `5 :: Fin 3` a compile-time error.
+description:    This plugin implements pseudo-dependently-typed integer literals.
+                .
+                This means the value of an integer literal is available at the type level,
+                and can be used for things like validation or type inference.  For example,
+                the 'SInt' instance refines unknown type-level 'Nat' variables to the
+                particular literal value, and the 'Fin' instance emits compile-time errors
+                for out-of-range values.  So, given
+                @mkVec :: SInt n -> (Fin n -> a) -> Vec n a@, @mkVec 4@ will have type
+                @(Fin 4 -> a) -> Vec 4 a@, and trying to type-check @4 :: Fin 4@ will report
+                a type error saying that @4@ is out of range.
+                .
+                Patterns get a similar treatment, too, so
+                @case (x :: SInt n) of { 1 -> Just Refl; _ -> Nothing } :: Maybe (n :~: 1)@
+                can type-check: the act of matching against 1 proved that the type-level @n@
+                was equal to 1, so 'Refl' can type-check as @n :~: 1@.
+                .
+                To use this, enable the extensions @DataKinds@, @FlexibleContexts@,
+                @ViewPatterns@, and @TypeApplications@, add @dependent-literals@ and
+                @dependent-literals-plugin@ to your package's dependencies, and add
+                @-fplugin=DependentLiterals.Plugin@ to @ghc-options@ to enable the plugin
+                globally, or use @OPTIONS_GHC@ pragmas to enable the plugin on a per-module
+                basis.  \"Normal\" integral types should still behave as normal, but literals
+                and numeric patterns will become supported for 'SInt' and 'Fin', and will
+                provide additional information to the type checker automatically.
 category:       Constraints
 homepage:       https://github.com/google/hs-dependent-literals#readme
 bug-reports:    https://github.com/google/hs-dependent-literals/issues
@@ -22,6 +40,7 @@ author:         Andrew Pritchard <awpr@google.com>
 maintainer:     Andrew Pritchard <awpr@google.com>
 copyright:      2019-2021 Google LLC
 license:        Apache-2.0
+license-file:   LICENSE
 build-type:     Simple
 extra-source-files:
     CHANGELOG.md
@@ -46,7 +65,6 @@ library
   build-depends:
       base >=4.12 && <4.16
     , ghc >=8.6 && <9.1
-    , sint >=0.1 && <0.2
     , syb >=0.1 && <0.8
   default-language: Haskell2010
 
