--- a/dependent-literals/dependent-literals.cabal
+++ b/dependent-literals/dependent-literals.cabal
@@ -4,10 +4,10 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 30f8fe2e48f6bbcd438d851405bf47990834dff8704739447c29c6398746aa0e
+-- hash: ee075abaa5a355783e9d5654e999ec647b0927daf34932c6a04eea6c66e688f2
 
 name:           dependent-literals
-version:        0.1.0.0
+version:        0.1.1.0
 synopsis:       Provides library support for pseudo-dependently-typed int literals.
 description:    This is the library counterpart of
                 <https://hackage.haskell.org/package/dependent-literals-plugin dependent-literals-plugin>.
@@ -45,4 +45,5 @@ library
     , sint >=0.1 && <0.2
     , snumber >=0.1 && <0.2
     , tagged >=0.8 && <0.9
+    , wrapped >=0.1 && <0.2
   default-language: Haskell2010
