--- a/dependent-literals-plugin/package.yaml
+++ b/dependent-literals-plugin/package.yaml
@@ -141,3 +141,7 @@ tests:
   WordErrors-test:
     <<: *error-test-template
     other-modules: [WordErrors]
+
+  TupleIndexing-test:
+    <<: *test-template
+    other-modules: [TupleIndexing]
