--- a/dependent-literals-plugin/dependent-literals-plugin.cabal
+++ b/dependent-literals-plugin/dependent-literals-plugin.cabal
@@ -1,10 +1,10 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.33.0.
+-- This file has been generated from package.yaml by hpack version 0.34.4.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 36ec8ae7ecaa56006786e7772271804225d27b9ef511f8a251b9b16812e4ca82
+-- hash: 2919dbbbf99ba9d33fd461b124667b82a1acf356a7bfc7a0b92eba4232d6fdea
 
 name:           dependent-literals-plugin
 version:        0.1.0.1
@@ -75,18 +75,23 @@ test-suite FinErrors-test
       FinErrors
   hs-source-dirs:
       tests
-  default-extensions: NoStarIsType DataKinds FlexibleContexts ViewPatterns TypeApplications
+  default-extensions:
+      NoStarIsType
+      DataKinds
+      FlexibleContexts
+      ViewPatterns
+      TypeApplications
   ghc-options: -fplugin=DependentLiterals.Plugin
   build-depends:
       base >=4.12 && <4.16
     , dependent-literals >=0.1.1 && <0.2
     , dependent-literals-plugin
-    , fin-int >=0.1 && <0.2
-    , numeric-kinds >=0.1 && <0.2
-    , short-vec >=0.1 && <0.2
-    , sint >=0.1 && <0.2
-    , snumber >=0.1 && <0.2
-    , wrapped >=0.1 && <0.2
+    , fin-int ==0.1.*
+    , numeric-kinds ==0.1.*
+    , short-vec ==0.1.*
+    , sint ==0.1.*
+    , snumber ==0.1.*
+    , wrapped ==0.1.*
   if !flag(error_message_tests)
     buildable: False
   default-language: Haskell2010
@@ -98,18 +103,23 @@ test-suite IntErrors-test
       IntErrors
   hs-source-dirs:
       tests
-  default-extensions: NoStarIsType DataKinds FlexibleContexts ViewPatterns TypeApplications
+  default-extensions:
+      NoStarIsType
+      DataKinds
+      FlexibleContexts
+      ViewPatterns
+      TypeApplications
   ghc-options: -fplugin=DependentLiterals.Plugin
   build-depends:
       base >=4.12 && <4.16
     , dependent-literals >=0.1.1 && <0.2
     , dependent-literals-plugin
-    , fin-int >=0.1 && <0.2
-    , numeric-kinds >=0.1 && <0.2
-    , short-vec >=0.1 && <0.2
-    , sint >=0.1 && <0.2
-    , snumber >=0.1 && <0.2
-    , wrapped >=0.1 && <0.2
+    , fin-int ==0.1.*
+    , numeric-kinds ==0.1.*
+    , short-vec ==0.1.*
+    , sint ==0.1.*
+    , snumber ==0.1.*
+    , wrapped ==0.1.*
   if !flag(error_message_tests)
     buildable: False
   default-language: Haskell2010
@@ -137,18 +147,23 @@ test-suite Plugin-test
       VecExamples
   hs-source-dirs:
       tests
-  default-extensions: NoStarIsType DataKinds FlexibleContexts ViewPatterns TypeApplications
+  default-extensions:
+      NoStarIsType
+      DataKinds
+      FlexibleContexts
+      ViewPatterns
+      TypeApplications
   ghc-options: -fplugin=DependentLiterals.Plugin
   build-depends:
       base >=4.12 && <4.16
     , dependent-literals >=0.1.1 && <0.2
     , dependent-literals-plugin
-    , fin-int >=0.1 && <0.2
-    , numeric-kinds >=0.1 && <0.2
-    , short-vec >=0.1 && <0.2
-    , sint >=0.1 && <0.2
-    , snumber >=0.1 && <0.2
-    , wrapped >=0.1 && <0.2
+    , fin-int ==0.1.*
+    , numeric-kinds ==0.1.*
+    , short-vec ==0.1.*
+    , sint ==0.1.*
+    , snumber ==0.1.*
+    , wrapped ==0.1.*
   default-language: Haskell2010
 
 test-suite PolyErrors-test
@@ -158,18 +173,23 @@ test-suite PolyErrors-test
       PolyErrors
   hs-source-dirs:
       tests
-  default-extensions: NoStarIsType DataKinds FlexibleContexts ViewPatterns TypeApplications
+  default-extensions:
+      NoStarIsType
+      DataKinds
+      FlexibleContexts
+      ViewPatterns
+      TypeApplications
   ghc-options: -fplugin=DependentLiterals.Plugin
   build-depends:
       base >=4.12 && <4.16
     , dependent-literals >=0.1.1 && <0.2
     , dependent-literals-plugin
-    , fin-int >=0.1 && <0.2
-    , numeric-kinds >=0.1 && <0.2
-    , short-vec >=0.1 && <0.2
-    , sint >=0.1 && <0.2
-    , snumber >=0.1 && <0.2
-    , wrapped >=0.1 && <0.2
+    , fin-int ==0.1.*
+    , numeric-kinds ==0.1.*
+    , short-vec ==0.1.*
+    , sint ==0.1.*
+    , snumber ==0.1.*
+    , wrapped ==0.1.*
   if !flag(error_message_tests)
     buildable: False
   default-language: Haskell2010
@@ -181,18 +201,23 @@ test-suite SIntErrors-test
       SIntErrors
   hs-source-dirs:
       tests
-  default-extensions: NoStarIsType DataKinds FlexibleContexts ViewPatterns TypeApplications
+  default-extensions:
+      NoStarIsType
+      DataKinds
+      FlexibleContexts
+      ViewPatterns
+      TypeApplications
   ghc-options: -fplugin=DependentLiterals.Plugin
   build-depends:
       base >=4.12 && <4.16
     , dependent-literals >=0.1.1 && <0.2
     , dependent-literals-plugin
-    , fin-int >=0.1 && <0.2
-    , numeric-kinds >=0.1 && <0.2
-    , short-vec >=0.1 && <0.2
-    , sint >=0.1 && <0.2
-    , snumber >=0.1 && <0.2
-    , wrapped >=0.1 && <0.2
+    , fin-int ==0.1.*
+    , numeric-kinds ==0.1.*
+    , short-vec ==0.1.*
+    , sint ==0.1.*
+    , snumber ==0.1.*
+    , wrapped ==0.1.*
   if !flag(error_message_tests)
     buildable: False
   default-language: Haskell2010
@@ -204,18 +229,23 @@ test-suite SNumberErrors-test
       SNumberErrors
   hs-source-dirs:
       tests
-  default-extensions: NoStarIsType DataKinds FlexibleContexts ViewPatterns TypeApplications
+  default-extensions:
+      NoStarIsType
+      DataKinds
+      FlexibleContexts
+      ViewPatterns
+      TypeApplications
   ghc-options: -fplugin=DependentLiterals.Plugin
   build-depends:
       base >=4.12 && <4.16
     , dependent-literals >=0.1.1 && <0.2
     , dependent-literals-plugin
-    , fin-int >=0.1 && <0.2
-    , numeric-kinds >=0.1 && <0.2
-    , short-vec >=0.1 && <0.2
-    , sint >=0.1 && <0.2
-    , snumber >=0.1 && <0.2
-    , wrapped >=0.1 && <0.2
+    , fin-int ==0.1.*
+    , numeric-kinds ==0.1.*
+    , short-vec ==0.1.*
+    , sint ==0.1.*
+    , snumber ==0.1.*
+    , wrapped ==0.1.*
   if !flag(error_message_tests)
     buildable: False
   default-language: Haskell2010
@@ -227,18 +257,23 @@ test-suite WordErrors-test
       WordErrors
   hs-source-dirs:
       tests
-  default-extensions: NoStarIsType DataKinds FlexibleContexts ViewPatterns TypeApplications
+  default-extensions:
+      NoStarIsType
+      DataKinds
+      FlexibleContexts
+      ViewPatterns
+      TypeApplications
   ghc-options: -fplugin=DependentLiterals.Plugin
   build-depends:
       base >=4.12 && <4.16
     , dependent-literals >=0.1.1 && <0.2
     , dependent-literals-plugin
-    , fin-int >=0.1 && <0.2
-    , numeric-kinds >=0.1 && <0.2
-    , short-vec >=0.1 && <0.2
-    , sint >=0.1 && <0.2
-    , snumber >=0.1 && <0.2
-    , wrapped >=0.1 && <0.2
+    , fin-int ==0.1.*
+    , numeric-kinds ==0.1.*
+    , short-vec ==0.1.*
+    , sint ==0.1.*
+    , snumber ==0.1.*
+    , wrapped ==0.1.*
   if !flag(error_message_tests)
     buildable: False
   default-language: Haskell2010
