--- a/dependent-literals/dependent-literals.cabal
+++ b/dependent-literals/dependent-literals.cabal
@@ -1,10 +1,10 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.33.0.
+-- This file has been generated from package.yaml by hpack version 0.34.4.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: ee075abaa5a355783e9d5654e999ec647b0927daf34932c6a04eea6c66e688f2
+-- hash: 90cf100a54a3c619f174d47672920ec47ac941d7a28c5faa608635e95a4beffb
 
 name:           dependent-literals
 version:        0.1.1.0
@@ -40,10 +40,10 @@ library
       src
   build-depends:
       base >=4.12 && <4.16
-    , fin-int >=0.1 && <0.2
-    , numeric-kinds >=0.1 && <0.2
-    , sint >=0.1 && <0.2
-    , snumber >=0.1 && <0.2
-    , tagged >=0.8 && <0.9
-    , wrapped >=0.1 && <0.2
+    , fin-int ==0.1.*
+    , numeric-kinds ==0.1.*
+    , sint ==0.1.*
+    , snumber ==0.1.*
+    , tagged ==0.8.*
+    , wrapped ==0.1.*
   default-language: Haskell2010
