--- a/dependent-literals/package.yaml
+++ b/dependent-literals/package.yaml
@@ -45,3 +45,7 @@ library:
     - DependentLiterals
     - DependentLiterals.Bounds
     - DependentLiterals.Int
+
+  when:
+    condition: false
+    other-modules: Paths_dependent_literals
