--- a/dependent-literals/package.yaml
+++ b/dependent-literals/package.yaml
@@ -15,7 +15,7 @@
 name: dependent-literals
 version: 0.1.1.0
 category: Constraints
-synopsis: Provides library support for pseudo-dependently-typed int literals.
+synopsis: Library for dependent-literals-plugin
 description: |
   This is the library counterpart of
   <https://hackage.haskell.org/package/dependent-literals-plugin dependent-literals-plugin>.
