--- a/dependent-literals/dependent-literals.cabal
+++ b/dependent-literals/dependent-literals.cabal
@@ -3,12 +3,10 @@ cabal-version: 1.12
 -- This file has been generated from package.yaml by hpack version 0.34.4.
 --
 -- see: https://github.com/sol/hpack
---
--- hash: 16057bd6edd4a64c908e7ac5dd911deb1c1eb98f4251b8e73c347b80c03d5b92
 
 name:           dependent-literals
 version:        0.1.1.0
-synopsis:       Provides library support for pseudo-dependently-typed int literals.
+synopsis:       Library for dependent-literals-plugin
 description:    This is the library counterpart of
                 <https://hackage.haskell.org/package/dependent-literals-plugin dependent-literals-plugin>.
                 See that package's description for more details.
